--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jquery": "^2.0.34",
     "angular-in-memory-web-api": "~0.1.1",
     "bootstrap": "^3.3.7",
+    "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "reflect-metadata": "^0.1.8",
