--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "ReportAngular2",
+  "name": "PostalReport",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.local.js --inline --progress --port 8085",
     "postinstall": "typings install",
@@ -9,29 +10,27 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~2.1.1",
-    "@angular/compiler": "~2.1.1",
-    "@angular/core": "~2.1.1",
-    "@angular/forms": "~2.1.1",
-    "@angular/http": "~2.1.1",
-    "@angular/platform-browser": "~2.1.1",
-    "@angular/platform-browser-dynamic": "~2.1.1",
-    "@angular/router": "~3.1.1",
-    "@angular/upgrade": "~2.1.1",
-    "@types/jquery": "^2.0.34",
-    "angular-in-memory-web-api": "~0.1.1",
+    "@angular/common": "~2.4.0",
+    "@angular/compiler": "~2.4.0",
+    "@angular/core": "~2.4.0",
+    "@angular/forms": "~2.4.0",
+    "@angular/http": "~2.4.0",
+    "@angular/platform-browser": "~2.4.0",
+    "@angular/platform-browser-dynamic": "~2.4.0",
+    "@angular/router": "~3.4.0",
+    "angular-in-memory-web-api": "~0.2.4",
     "bootstrap": "^3.3.7",
-    "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
-    "jquery": "^3.1.1",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.39",
-    "zone.js": "^0.6.25"
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "~5.0.1",
+    "systemjs": "0.19.40",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
+    "@types/node": "^7.0.5",
     "angular2-template-loader": "^0.5.0",
     "concurrently": "^2.0.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -41,10 +40,10 @@
     "html-webpack-plugin": "^2.22.0",
     "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4",
+    "typescript": "^2.2.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
     "webpack-merge": "^0.14.1"
