--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
+    "lib": ["es2015", "dom"],
     "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true
-  }
+    "suppressImplicitAnyIndexErrors": true,
+    "types": [ "node" ],
+    "typeRoots": [ "node_modules/@types" ]
+  },
+  "exclude": [ "node_modules"]
 }
